# nba-analyses

./: README.md  app.py  pyproject.toml  study.py
data/: nba_database.parquet
pages/: geral.py  player.py
pipeline/features/: data_features.py
plots/: basePlot.py
utils/: player.py
